--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/composition-api": "^1.2.4",
     "core-js": "^3.6.5",
+    "howler": "^2.2.3",
     "vue": "2.6.11",
     "vue-router": "^3.5.2",
     "vue-simple-svg": "^2.0.2",
