--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.2.4",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "howler": "^2.2.3",
     "vue": "2.6.11",
